--- a/docs/en/guide/shading-language/draw-basic-graphics.mdx
+++ b/docs/en/guide/shading-language/draw-basic-graphics.mdx
@@ -1,40 +1,38 @@
-# 绘制基础图形
+#  Drawing Basic Shapes
 
-## 几何图元与变换
+## Geometric Primitives and Transformations
 
-在开始绘制复杂图形之前，我们需要先理解最基本的构建块。在计算机图形学中，所有复杂的形状最终都是由基本图元构建而成的。
+Before starting to draw complex shapes, we need to understand the basic building blocks. In computer graphics, all complex shapes are ultimately built from basic primitives.
 
-让我们从最基础的图元开始：
-
-### 基本图元类型
+### Basic Primitive Types
 
 ```rust
-// 1. 点
+// 1. Point
 fn draw_point(self) -> vec4 {
     let point_size = 5.0;
-    // 在 pixel shader 中我们需要判断是否在点的范围内
+    // In pixel shader we need to check if we're within point range
     let distance = length(self.pos - vec2(0.5));
     return vec4(1.0, 0.0, 0.0, step(distance, point_size));
 }
 
-// 2. 线段
+// 2. Line segment
 fn draw_line(self) -> vec4 {
     let line_width = 2.0;
     let p1 = vec2(0.0, 0.0);
     let p2 = vec2(1.0, 1.0);
-    // 计算点到线的距离
+    // Calculate distance from point to line
     let dist = distance_to_line(self.pos, p1, p2);
     return vec4(0.0, 1.0, 0.0, step(dist, line_width));
 }
 
-// 3. 三角形
+// 3. Triangle
 fn draw_triangle(self) -> vec4 {
     let vertices = [
         vec2(0.0, 0.0),
         vec2(1.0, 0.0),
         vec2(0.5, 1.0)
     ];
-    // 判断点是否在三角形内
+    // Check if point is inside triangle
     let inside = point_in_triangle(self.pos, vertices);
     return vec4(0.0, 0.0, 1.0, inside);
 }
@@ -42,31 +40,29 @@ fn draw_triangle(self) -> vec4 {
 视觉表示：
 
 ```plaintext
-点       线段             三角形
+Point     Line Segment      Triangle
 
 ●         ●               ▲
-         ╱               / ╲
-        ●               /   ╲
+         ╱               ╱ ╲
+        ●               ╱   ╲
                        ▔▔▔▔▔▔▔
-
 ```
-### 坐标变换
+### Coordinate Transformations
 
-你会需要对这些图形进行各种操作：移动物体的位置、旋转物体的角度、改变物体的大小。这个时候就需要使用变换矩阵，一种用数学方式来精确描述这些操作的工具。
+You'll need to perform various operations on these shapes: moving their position, rotating their angle, changing their size. This is where transformation matrices come in - mathematical tools that precisely describe these operations.
 
-理解变换矩阵是处理图形的基础。主要有三种基本变换：
+Understanding transformation matrices is fundamental to handling graphics. There are three basic transformations:
 
-
-1. 平移变换
+1. Translation Transform
 
 ```rust
 fn translate(pos: vec2, offset: vec2) -> vec2 {
-    // 简单的向量加法
+    // Simple vector addition
     return pos + offset;
 }
 ```
 
-2. 旋转变换
+2. Rotation Transform
 
 ```rust
 fn rotate(pos: vec2, angle: float) -> vec2 {
@@ -79,26 +75,26 @@ fn rotate(pos: vec2, angle: float) -> vec2 {
 }
 ```
 
-3. 缩放变换
+3. Scale Transform
 
 ```rust
 fn scale(pos: vec2, scale: vec2) -> vec2 {
-    // 分量乘法
+    // Component multiplication
     return pos * scale;
 }
 ```
 
-## 距离场技术
+## Distance Field Technique
 
-距离场（Distance Field）是 Makepad 中实现高质量图形渲染的核心技术。让我们深入理解它：
+Distance Fields are a core technology in Makepad for achieving high-quality graphics rendering. Let's understand it in depth:
 
-### 什么是距离场？
+### What is a Distance Field?
 
-距离场是一个函数，它告诉我们空间中任意一点到形状边界的最短距离：
+A distance field is a function that tells us the shortest distance from any point in space to a shape's boundary:
 
-- 形状内部的点距离为负
-- 形状边界上的点距离为零
-- 形状外部的点距离为正
+- Points inside the shape have negative distance
+- Points on the shape's boundary have zero distance
+- Points outside the shape have positive distance
 
 ```rust
 fn circle_sdf(pos: vec2, center: vec2, radius: float) -> float {
@@ -106,24 +102,91 @@ fn circle_sdf(pos: vec2, center: vec2, radius: float) -> float {
     return length(pos - center) - radius;
 }
 ```
+It's useful to think of distance fields as a stack of semi-transparent circles. In this distance field, pure white areas (value of 1) are on the object. Pure black areas are farthest from the object. Gray areas in between have values from 0 to 1. This is a way to visualize distances between 0 and 1.
 
-把距离场想象成一堆不太透明的圆是很有用的。这个距离场中，表示纯白色的区域(也就是数值为1的部分)就在对象上。纯黑色部分，就是距离物体最远的点。中间的灰色部分，数值在0-1之间。这是一种可视化0到1之间距离的方法。
+[](https://trusted-heron-8b2.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fee83deb1-85d6-437c-894c-b4353fce458b%2Fb654cd01-0266-4898-b679-e27e8e801332%2FPasted_image_20241201074137.png?table=block&id=15369449-ef79-80d5-847b-eacab00cc02e&spaceId=ee83deb1-85d6-437c-894c-b4353fce458b&width=900&userId=&cache=v2)
 
-图片
+`Signed Distance Fields (SDF)` are three-dimensional scalar fields where each point's value represents the distance to the nearest surface. These distance values have a "signed" characteristic:
 
-**有号距离场 (Signed Distance Field, SDF)** 是一个三维标量场，其中每个点的值表示从该点到最近表面的距离。这些距离值具有“有号”的特性：
+- **Positive values**: Point is outside the object, indicating distance to the nearest surface
+- **Negative values**: Point is inside the object, negative value indicates distance to surface
+- **Zero values**: Point is exactly on the object's surface
 
-- **正值**：点位于物体的外部，距离物体表面最近的距离。
-- **负值**：点位于物体的内部，负数值表示点到物体表面的距离。
-- **零值**：点恰好位于物体表面。
+This way, SDFs provide not only the nearest distance from any point to an object's surface but also distinguish whether points are inside or outside the object.
 
-通过这种方式，SDF不仅能够提供从任意点到物体表面的最近距离，还能够区分点在物体内部还是外部。
+### Drawing Shapes Using Signed Distance Fields
 
-### 使用有符号距离场绘制形状
+**Signed Distance Fields (SDF)** are based on several key concepts:
 
-**有符号距离场 (SDF)** 基于以下几个关键概念：
+- **Voxel**: A small cubic unit in 3D space, used to partition the entire 3D space. In SDFs, we calculate the shortest distance from each voxel to the object's surface.
+- **Distance Field**: A field where each point's value represents the shortest distance to an object's surface. A distance field can be signed or unsigned.
+- **Trilinear Interpolation**: Method used to estimate SDF values at arbitrary points on a voxel grid in 3D space. Trilinear interpolation calculates by linearly interpolating between neighboring voxel values.
 
-- **体素 (Voxel)**：3D空间中的一个小立方体单元，用于分割整个3D空间。在SDF中，我们计算每个体素到物体表面的最短距离。
-- **距离场 (Distance Field)**：一个场，其中每个点的值表示到物体表面的最短距离。一个距离场可以是有号（Signed）或无号（Unsigned）的。
-- **三线性插值 (Trilinear Interpolation)**：用于在3D空间中的一个体素网格上估计任意点的SDF值的方法。三线性插值通过对体素点的邻近值进行线性插值来计算。
+## SDF Viewport Introduction (Sdf2d::viewport)
 
+```rust
+let sdf = Sdf2d::viewport(self.pos * self.rect_size);
+```
+
+1. `self.pos`: This is the current pixel coordinate in the shader, typically ranging from 0.0 to 1.0. It represents the relative position of the pixel we're processing within the entire drawing area.
+2. `self.rect_size`: This is the actual size of the rectangle we want to draw (in pixels).
+3. `self.pos * self.rect_size`: This multiplication converts normalized coordinates to actual pixel coordinates.
+
+Imagine we're drawing a button that's 200x100 pixels. The entire conversion process can be divided into three key stages:
+
+### 1. Initial Coordinate System (self.pos)
+
+```plaintext
+┌─────────────────┐
+│(0,0)            │
+│                 │
+│      (0.5,0.5)  │
+│                 │
+│         (1,1)   │
+└─────────────────┘
+Normalized coordinates: Range is 0.0 to 1.0
+```
+
+### 2. Multiply by Size (self.pos * self.rect_size)
+
+```plaintext
+┌─────────────────────┐
+│(0,0)                │
+│                     │
+│      (100,50)       │
+│                     │
+│           (200,100) │
+└─────────────────────┘
+Pixel coordinates: Now coordinates represent actual pixel positions
+rect_size = (200,100)
+```
+
+### 3. SDF Viewport (Sdf2d::viewport)
+
+```plaintext
+┌─────────────────────┐ ↑
+│(-100,-50)           │ │
+│                     │ 100px
+│      (0,0)          │ │
+│                     │ │
+│         (100,50)    │ ↓
+└─────────────────────┘
+←——— 200px ———→
+Centered coordinates: Origin at center
+```
+
+To better understand this transformation process, let's see how specific coordinate points are transformed:
+
+```plaintext
+Position    Normalized Coords  Pixel Coords    SDF Coords
+Top-left    (0.0, 0.0)        (0, 0)          (-100, -50)
+Center      (0.5, 0.5)        (100, 50)       (0, 0)
+Bottom-right (1.0, 1.0)       (200, 100)      (100, 50)
+```
+
+The benefits of this coordinate transformation are:
+
+1. **Precise Positioning**: Can precisely control the rendering of each pixel
+2. **Scale Independence**: Can easily handle UI elements of different sizes
+3. **Centered Operations**: Makes many graphical operations (like rotation) simpler
+4. **Anti-aliasing**: Makes edge rendering smoother
